# ebook_chunker

./: .gitignore  CLAUDE.md  pyproject.toml  readme.org  todo.org
.claude/: settings.local.json
ebook_chunker/: base_cli.py  cli.py  constants.py  epub_chunker.py  file_chunker.py  pandoc_utils.py
ebook_feeder/: cli.py  constants.py  models.py  private_readme.org
epub_sum_lib/: chunking.py  epubsplit.py  epubunz.py  pdf_splitter.py
plans/: structured_chunking.md
prompts/: podcast.md  podcast_Hayes_v1.3.1.md  podcast_Hayes_v1.3.1_fa.md  podcast_Hayes_v1.3.2.md  podcast_Hayes_v1.3.2_fa.md  podcast_Hayes_v1.3.md  podcast_Hayes_v1.3_fa.md  podcast_v1.1.md  podcast_v1.2.md  podcast_v1.3.md  summarize_fiction_v1.1.md  summarize_fiction_v1.md  translate_2fa_v1.md
